# forest-hybrid-ros2-stack

./: .gitignore  .gitmodules  README.md
src/conf/forest_hybrid_conf/: CMakeLists.txt  README.md  package.xml
src/conf/forest_hybrid_conf/config/: forest_defaults.yaml  forest_diag_imu.rviz  forest_diag_tf.rviz  forest_mvp_minimal.rviz  forest_mvp_sensors.rviz  forest_mvp_sim.rviz  forest_mvp_sim_lidar3d.rviz  forest_mvp_sim_lidar3d_experimental.rviz  layer_contracts.yaml
src/conf/forest_hybrid_conf/launch/: diag_imu.launch.py  diag_tf_ekf.launch.py  forest_bringup.launch.py  forest_bringup.launch.xml  mission_layer_only.launch.py  navigation_mvp.launch.py  sim_hybrid_test.launch.py  sim_mvp.launch.py  sim_mvp_slam.launch.py  sim_nav2.launch.py  sim_pose_bridge.launch.py
src/drivers_stack/forest_actuators_ros2/: CMakeLists.txt  README.md  package.xml
src/drivers_stack/forest_camera_ros2/: CMakeLists.txt  README.md  package.xml
src/drivers_stack/forest_camera_ros2/config/: camera_pi.yaml  camera_usb.yaml
src/drivers_stack/forest_camera_ros2/launch/: camera_pi.launch.py  camera_usb.launch.py
src/drivers_stack/forest_lidar_preprocess_cpp/: CMakeLists.txt  README.md  package.xml
src/drivers_stack/forest_lidar_preprocess_cpp/config/: forest_lidar_preprocess.yaml  forest_lidar_preprocess_lidar3d.yaml
src/drivers_stack/forest_lidar_preprocess_cpp/launch/: lidar_preprocess.launch.py
src/drivers_stack/forest_lidar_preprocess_cpp/src/: lidar_scan_classify_node.cpp
src/drivers_stack/forest_lidar_ros2/: CMakeLists.txt  DEPENDENCIES.md  README.md  package.xml  setup.cfg  setup.py
src/drivers_stack/forest_lidar_ros2/config/: fdpo_ydlidar_x4.yaml  forest_lidar.rviz  ydlidar_x4_forest.yaml
src/drivers_stack/forest_lidar_ros2/forest_lidar_ros2/: fdpo_ydlidar_x4_node.py  laserscan_to_pointcloud2.py
src/drivers_stack/forest_lidar_ros2/launch/: ydlidar_x4_fdpo.launch.py  ydlidar_x4_test.launch.py
src/drivers_stack/forest_nicla_vision_ros2/: README.md  package.xml  setup.cfg  setup.py
src/drivers_stack/forest_nicla_vision_ros2/config/: nicla_advr_receiver.yaml  nicla_camera_info.yaml  nicla_vision.yaml  nicla_vision_wifi.yaml
src/drivers_stack/forest_nicla_vision_ros2/forest_nicla_vision_ros2/: __init__.py  camera_info_util.py  nicla_device_probe.py  nicla_serial_bridge.py  nicla_transport.py  protocol.py
src/drivers_stack/forest_nicla_vision_ros2/launch/: nicla_vision.launch.py  nicla_vision_advr.launch.py  nicla_vision_advr_perception.launch.py  nicla_vision_perception.launch.py  nicla_vision_wifi.launch.py
src/drivers_stack/forest_sensors_cpp/: CMakeLists.txt  README.md  package.xml
src/drivers_stack/forest_sensors_cpp/config/: forest_lidar_extrinsics.yaml  forest_lidar_extrinsics_airy.yaml  forest_lidar_preprocess.yaml  forest_lidar_sim_planar.yaml
src/drivers_stack/forest_sensors_cpp/src/: imu_sanitize_node.cpp  laserscan_preprocess_node.cpp  laserscan_to_pointcloud2_node.cpp  static_sensor_tf_node.cpp  tracked_wheel_odometry_node.cpp
src/flight_stack/forest_hybrid_flight/: CMakeLists.txt  package.xml
src/flight_stack/forest_hybrid_flight/src/: hybrid_hop_executor_node.cpp  mavlink_client.cpp
src/forest_hybrid_msgs/: CMakeLists.txt  README.md  package.xml
src/forest_hybrid_msgs/msg/: HybridHopRequest.msg  HybridHopStatus.msg  HybridTransitionStatus.msg  MissionAck.msg  MissionCommand.msg  MissionStatus.msg  OperationMode.msg  SemanticClass.msg  SlamStatus.msg  TrackedTreeLandmark.msg  TrackedTreeLandmarkArray.msg  TreeLandmark.msg  TreeLandmarkArray.msg
src/localization_mapping_stack/forest_lio_bringup/: CMakeLists.txt  README.md  package.xml
src/localization_mapping_stack/forest_state_estimation/: CMakeLists.txt  README.md  package.xml
src/localization_mapping_stack/forest_state_estimation/config/: ekf.yaml  ekf_local.yaml  ekf_wheel_only.yaml  frames.yaml  gnss_cov_adapter.yaml  map_odom_authority.yaml  navsat_transform.yaml
src/localization_mapping_stack/forest_state_estimation/launch/: state_estimation.launch.py
src/localization_mapping_stack/forest_state_estimation/src/: gnss_cov_adapter_node.cpp  map_odom_authority_node.cpp  state_contract_node.cpp
src/localization_mapping_stack/forest_traversability_mapping/: CMakeLists.txt  README.md  package.xml
src/localization_mapping_stack/forest_traversability_mapping/config/: traversability_mapping.yaml
src/localization_mapping_stack/forest_traversability_mapping/launch/: traversability_mapping.launch.py
src/localization_mapping_stack/forest_traversability_mapping/src/: traversability_mapping_node.cpp
src/localization_mapping_stack/forest_tree_slam/: CMakeLists.txt  HANDOFF_SLAM_DEBUG.md  README.md  package.xml
src/localization_mapping_stack/forest_tree_slam/config/: tree_slam.yaml
src/localization_mapping_stack/forest_tree_slam/launch/: tree_slam.launch.py
src/localization_mapping_stack/forest_tree_slam/src/: backend.cpp  mode_manager.cpp  multiview_dbh.cpp  relocalizer.cpp  tracker.cpp  tree_slam_node.cpp
src/localization_mapping_stack/forest_tree_slam/test/: test_backend.cpp  test_camera_projection.cpp  test_map_unification.cpp  test_mode_manager.cpp  test_multiview_class_score.cpp  test_multiview_dbh.cpp  test_node_glue.cpp  test_relocalizer.cpp  test_tile_map.cpp  test_tracker.cpp
src/navigation_stack/forest_nav2_bringup/: CMakeLists.txt  package.xml
src/navigation_stack/forest_navigation_ros2/: CMakeLists.txt  README.md  package.xml
src/navigation_stack/nav2_dstar_lite_planner/: CMakeLists.txt  dstar_lite_plugin.xml  package.xml
src/perception_stack/forest_3d_perception/: CMakeLists.txt  README_EXPERIMENTAL.md  package.xml
src/perception_stack/forest_pointcloud_semantics/: CMakeLists.txt  README.md  package.xml
src/perception_stack/forest_semantic_fusion/: README.md  package.xml  setup.cfg  setup.py
src/perception_stack/forest_semantic_segmentation/: CMakeLists.txt  README.md  package.xml
src/perception_stack/forest_vision_detection/: package.xml  setup.cfg  setup.py
src/planner_stack/forest_planner_ros2/: CMakeLists.txt  README.md  package.xml
(+432 files in other folders)
