<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_hybrid_conf</name>
  <version>0.1.0</version>
  <description>Lançamentos e parâmetros centralizados (*bringup*) do stack.</description>
  <maintainer email="tese@fe.up.pt">tese</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>forest_camera_ros2</exec_depend>
  <exec_depend>forest_hybrid_msgs</exec_depend>
  <exec_depend>forest_robot_supervisor</exec_depend>
  <exec_depend>forest_semantic_segmentation</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
