<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_lidar_ros2</name>
  <version>0.1.0</version>
  <description>2D YDLidar X4 test driver (fdpo-compatible settings) for forest-hybrid-ros2-stack.</description>
  <maintainer email="tese@fe.up.pt">tese</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>forest_sensors_cpp</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
