<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_state_estimation</name>
  <version>0.1.0</version>
  <description>Camada 0: EKF multi-sensor (rodas, IMU, GNSS) via robot_localization.</description>
  <maintainer email="tese@fe.up.pt">forest-hybrid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>forest_sensors_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
