<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_tree_slam</name>
  <version>0.1.0</version>
  <description>
    Tree-SLAM florestal por landmarks de tronco (pose-graph SE(2), GTSAM/iSAM2).
    Autoridade de map-&gt;odom no solo; relocalização TreeLoc através de saltos
    aéreos. Ver docs/FOREST_TREE_SLAM_DESIGN.md.
  </description>
  <maintainer email="tese@fe.up.pt">forest-hybrid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>forest_hybrid_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>forest_3d_perception</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
