<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_nav2_bringup</name>
  <version>0.1.0</version>
  <description>Nav2 bringup + mission_nav2_bridge for forest-hybrid stack.</description>
  <maintainer email="tese@fe.up.pt">tese</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>forest_hybrid_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <!-- nav2_dstar_lite_planner: workspace package; build after scripts/setup_nav2_deps.sh -->
  <export><build_type>ament_cmake</build_type></export>
</package>
