<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_dstar_lite_planner</name>
  <version>0.1.0</version>
  <description>D* Lite global planner plugin for Nav2 (incremental replanning on growing costmaps).</description>
  <maintainer email="tese@fe.up.pt">tese</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/dstar_lite_plugin.xml"/>
  </export>
</package>
